# gong-mcp

./: .gitignore  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  TESTING_RESULTS.md  dev.py  example_usage.py  gong_server.py  launch_gong_server.py  pyproject.toml  run_mcp_server.py  test_final_check.py  test_gong_client.py  test_gong_server.py  test_local_auth.py  test_mcp_direct.py  test_remote_server.py
app/: clients.py  constants.py  database.py  dependencies.py  gong_mcp.py  helpers.py  middleware.py  server.py
app/models/: apikey.py  auth.py  group.py  permission.py  security.py  user.py
app/routes/: auth.py
app/services/: api.py  auth.py  mixpanel.py  security.py  user.py
app/templates/: login.html
app/tests/: conftest.py  test_api_service.py  test_mcp_security.py
