[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gong-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Gong API integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gong MCP Server", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gong-mcp = "gong_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/gong-mcp"
Repository = "https://github.com/yourusername/gong-mcp"
Documentation = "https://github.com/yourusername/gong-mcp#readme"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
